# qg-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  FIRSTPAIR.md  QGLake.md  README.md  RELEASES.md  TEXTPACK.md  book.build.json
.github/workflows/: ci.yml
docs/: ai-navigator.md  memory-service.md  querygraph-architecture-report.md  sail-typesec-grust-implementation.md
docs/blog/: announcing-querygraph-stack.md
docs/blog/assets/querygraph/diagrams/: diagram-01.mmd  diagram-03.mmd  diagram-04.mmd  diagram-05.mmd  diagram-06.mmd  diagram-08.mmd  diagram-09.mmd  diagram-11.mmd  diagram-13.mmd  diagram-15.mmd  diagram-18.mmd
docs/book/: PUBLISH.md  build.mjs  build.sh  check_epub_metadata.sh  cover.md  epub.css  fix_epub_layout.sh  manuscript.md  metadata.yaml
docs/book/diagrams/: diagram-02.mmd  diagram-03.mmd  diagram-06.mmd  diagram-07.mmd  diagram-08.mmd  diagram-09.mmd  diagram-10.mmd  diagram-12.mmd  diagram-14.mmd  diagram-17.mmd  diagram-19.mmd  diagram-20.mmd
docs/guide/: build.sh  check_epub_metadata.sh  check_pdf_layout.sh  cover.md  fix_epub_layout.sh  fix_pdf_covers.sh  manuscript.md  metadata.yaml
docs/onepager/: build.sh  querygraph-stack.html  querygraph-stack.ms  querygraph-stack.typ
docs/pdf/: querygraph-architecture-report.body.typ  querygraph-architecture-report.typ
docs/slides/: querygraph-stack.typ
lakehouse/: README.md  datasets.md
lakehouse/python/: README.md  pyproject.toml  query_examples.py  register_audit.py  register_lakehouse.py
scripts/: textpack.py
src/: a2a.rs  agent.rs  cdif.rs  codata.rs  croissant.rs  cypher.rs  dataverse.rs  did.rs  lakecat.rs  lakehouse.rs  lib.rs  lineage.rs  main.rs  mcp.rs  memory.rs  navigator.rs  odrl.rs  osi.rs  qglake.rs  rbac.rs  sail.rs  server.rs  validation.rs
src/agent/: interop.rs  mod.rs  ollama.rs
src/lakecat/: bundle.rs  mod.rs  model.rs  tests.rs  verify.rs
src/lakehouse/: infer.rs  load.rs  mod.rs  normalize.rs  project.rs  types.rs
src/lineage/: mod.rs  sail_sink.rs
src/qglake/: build.rs  mod.rs  model.rs  render.rs
src/sail/: graph.rs  mod.rs
tests/fixtures/: py_envelope.json
