[package]
name = "querygraph"
version = "0.1.1"
edition = "2024"
description = "AI Navigator semantic layer for governed dataset discovery and reuse"
license = "MIT"

[dependencies]
anyhow = "1.0"
arrow = "58.3.0"
bs58 = "0.5"
calamine = "0.28"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
csv = "1.3"
grust = { package = "grust-graph", version = "0.11.0", path = "../../grust/crates/grust", features = ["sail"] }
grust-cypher = { version = "0.11.0", path = "../../grust/crates/grust-cypher" }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
typesec-integrations = "0.10.0"
typesec-core = "0.10.0"
