[project]
name = "querygraph-lakehouse-client"
version = "0.1.0"
description = "PySpark client utilities for inspecting the QueryGraph Sail lakehouse"
requires-python = ">=3.14"
dependencies = [
  "pyspark>=4.1.2",
  "pandas>=3.0.0",
  "pyarrow>=24.0.0",
  "grpcio>=1.81.0",
  "grpcio-status>=1.81.0",
  "googleapis-common-protos>=1.75.0",
  "zstandard>=0.25.0",
]
